--- a/ext/r2inference/Makefile.am
+++ b/ext/r2inference/Makefile.am
@@ -1,10 +1,26 @@
 plugin_LTLIBRARIES = libgstinference.la
 
-# sources used to compile this plug-in
-libgstinference_la_SOURCES = gstgooglenet.h gstgooglenet.c gstinference.c
+libgstinference_la_SOURCES =		\
+	gstgooglenet.c 			\
+	gstinference.c
 
-# compiler and linker flags used to compile this plugin, set in configure.ac
-libgstinference_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS)
-libgstinference_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS)
-libgstinference_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
-libgstinference_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)
+libgstinference_la_CFLAGS =		\
+	$(GST_CFLAGS)			\
+	$(GST_BASE_CFLAGS)		\
+	$(GST_PLUGINS_BASE_CFLAGS)	\
+	-I$(top_srcdir)/gst-libs
+
+libgstinference_la_LIBADD =		\
+	$(GST_LIBS)			\
+	$(GST_BASE_LIBS)		\
+	$(GST_PLUGINS_BASE_LIBS)	\
+	$(top_builddir)/gst-libs/gst/r2inference/libgstinference-@GST_API_VERSION@.la
+
+libgstinference_la_LDFLAGS = 		\
+	$(GST_PLUGIN_LDFLAGS)
+
+libgstinference_la_LIBTOOLFLAGS = 	\
+	$(GST_PLUGIN_LIBTOOLFLAGS)
+
+noinst_HEADERS =		\
+	gstgooglenet.h
