--- a/gst-libs/gst/r2inference/Makefile.am
+++ b/gst-libs/gst/r2inference/Makefile.am
@@ -24,7 +24,7 @@ libgstinference_@GST_API_VERSION@_la_CFLAGS=	\
 
 libgstinference_@GST_API_VERSION@_la_LIBADD=	\
 	$(GST_LIBS)				\
-	$(GST_BASE_LIBS)			\
+	$(GST_BASE_LIBS) -lgstvideo-@GST_API_VERSION@	\
 	$(GST_PLUGINS_BASE_LIBS)		\
 	$(R2INFERENCE_LIBS)
 
