--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,13 +4,13 @@ else
 SUBDIRS_CHECK =
 endif
 
-#if BUILD_EXAMPLES
-#SUBDIR_EXAMPLES = examples
-#else
-#SUBDIR_EXAMPLES =
-#endif
+if ENABLE_EXAMPLES
+SUBDIRS = examples
+else
+SUBDIRS =
+endif
 
-SUBDIRS = $(SUBDIRS_CHECK) $(SUBDIR_EXAMPLES)
+SUBDIRS += $(SUBDIRS_CHECK) $(SUBDIR_EXAMPLES)
 
 DIST_SUBDIRS = check files
 
