--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,13 +4,13 @@ else
 SUBDIRS_CHECK =
 endif
 
-if ENABLE_EXAMPLES
-SUBDIRS = examples
+if BUILD_EXAMPLES
+SUBDIRS_EXAMPLES = examples
 else
-SUBDIRS =
+SUBDIRS_EXAMPLES =
 endif
 
-SUBDIRS += $(SUBDIRS_CHECK) $(SUBDIR_EXAMPLES)
+SUBDIRS = $(SUBDIRS_CHECK) $(SUBDIRS_EXAMPLES)
 
 DIST_SUBDIRS = check files
 
