--- a/ext/Makefile.am
+++ b/ext/Makefile.am
@@ -5,7 +5,9 @@ R2INFERENCE_DIR=
 endif
 
 SUBDIRS=$(R2INFERENCE_DIR)
+SUBDIRS+= opencv
 
 DIST_SUBDIRS=r2inference
+DIST_SUBDIRS+= opencv
 
 include $(top_srcdir)/common/parallel-subdirs.mak
