Add TinyYolo example application

--- a/tests/examples/detection/Makefile.am
+++ b/tests/examples/detection/Makefile.am
@@ -9,9 +9,18 @@
 # back to RidgeRun without any encumbrance.
 
 if BUILD_EXAMPLES
-CLASSIFICATION_DIR=classification detection
-else
-CLASSIFICATION_DIR=
-endif
 
-SUBDIRS = $(CLASSIFICATION_DIR)
+noinst_PROGRAMS =                  \
+        detection
+
+# sources used to compile this plug-in
+detection_SOURCES = gstdetection.c
+
+AM_CFLAGS =                         \
+        -I\$(top_srcdir)/gst-libs   \
+        $(GST_CFLAGS)
+
+AM_LDFLAGS =                        \
+        $(GST_LIBS)
+
+endif # BUILD_EXAMPLES
