Extend detection example to use new signal prototype

--- a/tests/examples/detection/Makefile.am
+++ b/tests/examples/detection/Makefile.am
@@ -18,9 +18,13 @@ detection_SOURCES = gstdetection.c customlogic.cc customlogic.h
 
 AM_CFLAGS =                         \
         -I\$(top_srcdir)/gst-libs   \
-        $(GST_CFLAGS)
+        $(GST_CFLAGS)		    \
+        $(GST_BASE_CFLAGS)          \
+        $(GST_PLUGINS_BASE_CFLAGS)
 
 AM_LDFLAGS =                        \
-        $(GST_LIBS)
+        $(GST_LIBS)		    \
+        $(GST_BASE_LIBS)	    \
+        $(GST_PLUGINS_BASE_LIBS)
 
 endif # BUILD_EXAMPLES
