--- a/configure.ac
+++ b/configure.ac
@@ -272,6 +272,21 @@ translit(dnm, m, l) AM_CONDITIONAL(USE_OPENCV, true)
 AG_GST_CHECK_FEATURE(OPENCV, [OpenCV computer vision library], opencv, [
   AG_GST_PKG_CHECK_MODULES(OPENCV, opencv >= $OPENCV_REQ )
 ])
+dnl define conditional for opencv versions 2.3.1 to 3.1.0
+if test "$USE_OPENCV" = "yes"; then
+  OCV_BASE_VERSION_MAJOR=3
+  OCV_BASE_VERSION_MINOR=2
+  OCV_VERSION_MAJOR=$(pkg-config --modversion opencv | awk -F. '{print $1}')
+  OCV_VERSION_MINOR=$(pkg-config --modversion opencv | awk -F. '{print $2}')
+  if test "$OCV_VERSION_MAJOR" -lt "$OCV_BASE_VERSION_MAJOR"; then
+    AC_DEFINE([OCV_VERSION_LT_3_2], [1], [Defined if OpenCV version is less than 3.2])
+  else
+    if test "$OCV_VERSION_MINOR" -lt "$OCV_BASE_VERSION_MINOR"; then
+      AC_DEFINE([OCV_VERSION_LT_3_2], [1], [Defined if OpenCV version is less than 3.2])
+    fi
+  fi
+  AC_MSG_NOTICE([OpenCV version: $OCV_VERSION_MAJOR.$OCV_VERSION_MINOR])
+fi
 
 dnl *** r2inference ***
 AG_GST_CHECK_FEATURE(R2INFERENCE, [RidgeRun\'s Inference Framework], r2inference, [
