--- a/gst-libs/gst/Makefile.am
+++ b/gst-libs/gst/Makefile.am
@@ -1,8 +1,19 @@
-
-SUBDIRS=
-
 if USE_R2INFERENCE
-SUBDIRS += r2inference
-endif #USE_R2INFERENCE
+R2INFERENCE_DIR=r2inference
+else
+R2INFERENCE_DIR=
+endif
 
-DIST_SUBDIRS = r2inference
+if USE_OPENCV
+OPENCV_DIR = opencv
+else
+OPENCV_DIR =
+endif
+
+SUBDIRS =				\
+	$(R2INFERENCE_DIR)		\
+	$(OPENCV_DIR)
+
+DIST_SUBDIRS =				\
+	r2inference			\
+	opencv
