--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -31,7 +31,8 @@ libgstinferenceoverlay_la_LIBADD =	\
 	$(GST_VIDEO_LIBS)		\
 	$(OPENCV_LIBS)			\
 	$(R2INFERENCE_LIBS)		\
-	$(top_builddir)/gst-libs/gst/r2inference/libgstinference-@GST_API_VERSION@.la
+	$(top_builddir)/gst-libs/gst/r2inference/libgstinference-@GST_API_VERSION@.la \
+	$(top_builddir)/gst-libs/gst/opencv/libgstinferenceoverlay-@GST_API_VERSION@.la
 
 libgstinferenceoverlay_la_LDFLAGS = 	\
 	$(GST_PLUGIN_LDFLAGS)
