--- a/tests/examples/embedding/Makefile.am
+++ b/tests/examples/embedding/Makefile.am
@@ -9,9 +9,22 @@
 # back to RidgeRun without any encumbrance.
 
 if BUILD_EXAMPLES
-EXAMPLES_DIR=classification detection embedding
-else
-EXAMPLES_DIR=
-endif
 
-SUBDIRS = $(EXAMPLES_DIR)
+noinst_PROGRAMS =                  \
+        embedding
+
+# sources used to compile this plug-in
+embedding_SOURCES = gstembedding.c customlogic.cc customlogic.h
+
+AM_CFLAGS =                         \
+        -I\$(top_srcdir)/gst-libs   \
+        $(GST_CFLAGS)		    \
+        $(GST_BASE_CFLAGS)          \
+        $(GST_PLUGINS_BASE_CFLAGS)
+
+AM_LDFLAGS =                        \
+        $(GST_LIBS)		    \
+        $(GST_BASE_LIBS)	    \
+        $(GST_PLUGINS_BASE_LIBS)
+
+endif # BUILD_EXAMPLES
