Refactor pre and post process to use a common helper
All preprocess functions shared the same structure with different mean and std.  As such,
we created a common helper that change the value of the image pixels with the mean and std given.

In the case of the postprocess, we use common functions for remove the common boxes in the different tinyyolos.

--- a/ext/r2inference/Makefile.am
+++ b/ext/r2inference/Makefile.am
@@ -7,9 +7,7 @@ libgstinference_la_SOURCES =		\
 	gsttinyyolov2.c			\
 	gsttinyyolov3.c                 \
 	gstfacenetv1.c                  \
-	gstresnet50v1.c			\
-	preprocess.c            \
-	postprocess.c
+	gstresnet50v1.c
 
 libgstinference_la_CFLAGS =		\
 	$(GST_CFLAGS)			\
@@ -44,6 +42,4 @@ noinst_HEADERS =			\
 	gsttinyyolov2.h			\
 	gsttinyyolov3.h                 \
 	gstfacenetv1.h                  \
-	gstresnet50v1.h			\
-	preprocess.h 			\
-	postprocess.h
+	gstresnet50v1.h
