--- a/Makefile.am
+++ b/Makefile.am
@@ -56,6 +56,6 @@ include $(top_srcdir)/common/cruft.mak
 all-local: check-cruft
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = gst-inference-@PACKAGE_VERSION@.pc
+pkgconfig_DATA = gst-inference-@GST_API_VERSION@.pc
 
 EXTRA_DIST = gst-inference.pc.in
