inferencecrop: Add placeholder for detection crop

--- a/configure.ac
+++ b/configure.ac
@@ -381,6 +381,8 @@ docs/version.entities
 ext/Makefile
 ext/opencv/Makefile
 ext/r2inference/Makefile
+gst/Makefile
+gst/inferencecrop/Makefile
 gst-libs/Makefile
 gst-libs/gst/Makefile
 gst-libs/gst/opencv/Makefile
