Install missing public header

--- a/gst-libs/gst/r2inference/Makefile.am
+++ b/gst-libs/gst/r2inference/Makefile.am
@@ -45,4 +45,10 @@ gstinferenceinclude_HEADERS=		\
 	gsttensorflow.h 		\
 	gstinferencepreprocess.h 	\
 	gstinferencepostprocess.h	\
-	gstinferencedebug.h
+	gstinferencedebug.h             \
+        gstinferencemeta.h
+
+
+
+
+
