--- a/configure.ac
+++ b/configure.ac
@@ -383,6 +383,7 @@ ext/r2inference/Makefile
 gst/Makefile
 gst/inferencecrop/Makefile
 gst/inferencefilter/Makefile
+gst/inferencedebug/Makefile
 gst-libs/Makefile
 gst-libs/gst/Makefile
 gst-libs/gst/opencv/Makefile
