Update r2inference version requirement

--- a/configure.ac
+++ b/configure.ac
@@ -288,8 +288,9 @@ if test "$USE_OPENCV" = "yes"; then
 fi
 
 dnl *** r2inference ***
+R2INFERENCE_REQ=0.4.0
 AG_GST_CHECK_FEATURE(R2INFERENCE, [RidgeRun\'s Inference Framework], r2inference, [
-  AG_GST_PKG_CHECK_MODULES(R2INFERENCE, r2inference-0.0)
+  AG_GST_PKG_CHECK_MODULES(R2INFERENCE, r2inference-0.0 >= $R2INFERENCE_REQ)
 ],[],[],[
   AC_MSG_ERROR([Please install R2Inference from https://github.com/RidgeRun/r2inference.git])
 ])
