Include opencv to makefile

--- a/ext/opencv/Makefile.am
+++ b/ext/opencv/Makefile.am
@@ -13,6 +13,7 @@ libgstinferenceoverlayplugin_la_CFLAGS =	\
 	$(GST_PLUGINS_BASE_CFLAGS)	\
 	$(GST_VIDEO_CFLAGS)		\
 	$(R2INFERENCE_CFLAGS)		\
+	$(OPENCV_CFLAGS)		\
 	-I$(top_srcdir)/gst-libs
 
 
