--- a/ext/r2inference/Makefile.am
+++ b/ext/r2inference/Makefile.am
@@ -10,9 +10,7 @@ libgstinference_la_SOURCES =		\
 	gsttinyyolov3.c                 \
 	gstfacenetv1.c                  \
 	gstresnet50v1.c			\
-	gstmobilenetv2.c                \
-	gstinferencebin.c
-
+	gstmobilenetv2.c
 
 libgstinference_la_CFLAGS =		\
 	$(GST_CFLAGS)			\
@@ -50,5 +48,4 @@ noinst_HEADERS =			\
 	gsttinyyolov3.h                 \
 	gstfacenetv1.h                  \
 	gstresnet50v1.h			\
-	gstmobilenetv2.h                \
-	gstinferencebin.h
+	gstmobilenetv2.h
