--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,5 @@ jobs:
     - name: Build Gst-Inference
       run: |
         NOCONFIGURE=1 ./autogen.sh
-        ./configure --prefix $PREFIX
+        ./configure --prefix $PREFIX --disable-docs
         make
-      
