Add meson files to the gst inference examples

--- a/meson.build
+++ b/meson.build
@@ -219,5 +219,5 @@ configure_file(output : 'config.h', configuration : cdata)
 subdir('gst-libs')
 subdir('gst')
 subdir('ext')
-#subdir('tests')
+subdir('tests')
 subdir('docs')
