Add gstinference dependency to examples

--- a/tests/examples/embedding/meson.build
+++ b/tests/examples/embedding/meson.build
@@ -6,5 +6,5 @@ example_source = [
 
 executable('embedding', example_source,
   include_directories: [configinc, inference_inc_dir],
-  dependencies : [example_deps],
+  dependencies : [example_deps, gstinference_dep],
   install: false)
