--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,5 +1,5 @@
 if not get_option('enable-tests').disabled() and gst_check_dep.found()
-  #subdir('check')
+  subdir('check')
 endif
 
 if not get_option('enable-examples').disabled()
